# pineneedle

./: .gitignore  DESIGN.md  README.md  THOUGHTS.md  env_template  pyproject.toml  pytest.ini  run_tests.py
.cursor/rules/: project.mdc
example_data/: contact.md  education.md  experience.md
pineneedle/: __init__.py  agents.py  cli.py  file_operations.py  filename_utils.py  init.py  job_posting.py  models.py  pdf.py  profile_service.py  services.py  tones.py
pineneedle/cli/: __init__.py  job_commands.py  main.py
pineneedle/commands/: __init__.py  init.py
pineneedle/tui/: __init__.py  base.py  main.py  managers.py  profile.py  settings.py
tests/: README.md  __init__.py  test_integration.py
